# plink_pipelines

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/workflows/: coverage.yml  release.yml  test.yml
config/: make_dataset.spec
misc/: release.py  update_reqs.sh
plink_pipelines/: make_dataset.py  validation_functions.py
src/plink_pipelines/: make_dataset.py  validation_functions.py
tests/: test_cli_functions.py  test_edge_cases.py  test_luigi_tasks.py  test_make_dataset.py  test_parquet_functions.py  test_utility_functions.py  test_validation.py
