[tool.poetry]
name = "plink_pipelines"
version = "0.6.0"
description = ""
authors = ["Arnor Sigurdsson <arnor-sigurdsson@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = "^2.2.3"
py = "^1.11.0"
luigi = "^3.5.2"
aislib = "^0.3.0"
bed-reader = "^1.0.6"
deeplake = "4.1.3"
numpy = "~2.1.0"
numba = "^0.61.0"

[tool.poetry.scripts]
plink_pipelines = "plink_pipelines.make_dataset:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
tox = "^4.23.2"
flake8 = "^7.1.1"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
Sphinx = "^8.1.3"
coverage = "^7.6.4"
snakeviz = "^2.2.2"
pytest-cov = "^6.0.0"
pynvim = "^0.4.3"
visidata = "^3.1.1"
pre-commit = "^4.0.1"
black = "^24.10.0"
psutil = "^6.1.0"
memory-profiler = "^0.61.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
