[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[project]
name = "plink_pipelines"
version = "0.8.3"
description = "PLINK format genomics data processing pipelines"
authors = [
    {name = "Arnor Sigurdsson", email = "arnor-sigurdsson@users.noreply.github.com"}
]
requires-python = ">=3.11"
dependencies = [
    "luigi>=3.5.2",
    "aislib>=0.3.0",
    "numpy>=2.3.0",
    "numba>=0.62.0",
    "pyarrow>=18.0.0",
    "geno-reader>=0.1.0",
]

[project.scripts]
plink_pipelines = "plink_pipelines.make_dataset:main"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "tox>=4.23.2",
    "ruff>=0.8.0",
    "coverage>=7.6.4",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.0.1",
    "deptry>=0.23.1",
    "pandas>=2.3.2",
    "tomlkit>=0.13.3",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["plink_pipelines"]

[tool.deptry]
ignore = ["DEP003"]
exclude = ["misc", "tests", ".venv", ".tox"]
